fix restore-default not showing after page load setup script comments for fields that set constraints on user preferences (MaxDbLost, MaxTableList)

--- a/setup/styles.css
+++ b/setup/styles.css
@@ -195,6 +195,11 @@ ul.tabs li a:hover, ul.tabs li a:active {
     margin-bottom: -3px;
 }
 
+.userprefs-comment {
+    cursor: help;
+    float: right;
+}
+
 /* forms */
 
 fieldset {
